--- a/css/home-style.css
+++ b/css/home-style.css
@@ -165,6 +165,7 @@ header {
 .thumbnail{
     border: 0;
     background-color: #F2F2F2;
+    cursor: pointer;
 }
 
 .Section-part1 .thumbnail img {
